# TranscriptionProject

./: .gitignore  AGENTS.md  AUDIO_SYSTEM_REFACTOR.md  JUCE_TIME_STRETCHING_IMPLEMENTATION.md  MANUAL_SETUP.md  NEXT_STEPS.md  README.md  REFACTORING_GUIDE.md  REFACTORING_SUCCESS.md  REFACTORING_SUMMARY.md  SETUP.md  STATE_AUDIT.md  VERIFY_REFACTORING.md  VITE_SETUP.md  dev.sh  jest.config.js  launch-app.applescript  launch-dev.applescript  launch-fixed.applescript  launch-simple.applescript  launch.applescript  package-lock.json  package-simple.json  package.json  playwright.config.ts  requirements.txt  setup.sh  shortcut-launch.applescript  simple-launch.applescript  start-dev.sh  start-transcription.sh  start-with-devtools.sh  start-without-devtools.sh  tailwind.config.js  test-audio-fix.js  test_whisper.py  tsconfig.json  tsconfig.main.json  vite.config.ts  whisper_service.py
App Descriptions/: Audio System Explination.rtf  CSS Stylings Cheat Sheet.rtf  CodexLoggingSystem.rtf  HowReactHooksWork.rtf  Terminal Commands.rtf
docs/: ARCHITECTURE_V2.md  Editing-Text-Audio-Integration.md
native/juce-backend/: CMakeLists.txt  README.md
native/juce-backend/src/: main.cpp
playwright-report/: index.html
scripts/: build-juce.sh
src/: setupTests.ts
src/__mocks__/: electron.ts
src/main/: main.ts  preload-minimal.ts  preload.ts
src/renderer/: App-complex.tsx  App-fixed-debug.tsx  App-full.tsx  App-minimal-working.tsx  App-test-simple.tsx  App.css  App.legacy.tsx  App.tsx  AppRefactored.tsx  design-tokens.css  index.css  index.html  main.tsx
src/shared/: operations.ts  types.ts  utils.js  utils.js.map  utils.ts
test-results/: .last-run.json  results.json
test-results/css-system-verification-CS-5fd3a--Core-CSS-Variables-Defined-electron-visual-tests/: error-context.md  video.webm
tests/: css-debugging.spec.ts
tests/visual/: audio-loading-debug.spec.ts  (+12 more)
(+215 files in other folders)
